%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Animator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Horizontal
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: AttackFlag
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: CanAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: AvoidFlag
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isGround
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: RunFlag
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110764382}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20617324
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400012, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 4
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400008, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 4
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400010, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 4
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: Horizontal
  m_BlendParameterY: New Float
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110116152
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110217324}
  m_DstState: {fileID: 110224972}
  m_TransitionDuration: .0504201651
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: AttackFlag
    m_EventTreshold: 0
    m_ExitTime: .949579835
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110116432
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110224972}
  m_DstState: {fileID: 110216730}
  m_TransitionDuration: .0165983997
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: CanAttack
    m_EventTreshold: 0
    m_ExitTime: .898305058
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110121230
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268324}
  m_DstState: {fileID: 110217324}
  m_TransitionDuration: .101694912
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: RunFlag
    m_EventTreshold: 0
    m_ExitTime: .898305058
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110150670
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110217324}
  m_DstState: {fileID: 110268324}
  m_TransitionDuration: .0504201651
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: RunFlag
    m_EventTreshold: 0
    m_ExitTime: .949579835
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110160354
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225590}
  m_DstState: {fileID: 110217324}
  m_TransitionDuration: .101694912
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isGround
    m_EventTreshold: 0
    m_ExitTime: .898305058
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110161788
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110216730}
  m_DstState: {fileID: 110278064}
  m_TransitionDuration: .297221214
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: CanAttack
    m_EventTreshold: 0
    m_ExitTime: .898305058
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110188252
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278064}
  m_DstState: {fileID: 110217324}
  m_TransitionDuration: 1.08676422
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: AvoidFlag
    m_EventTreshold: 0
    m_ExitTime: .898305058
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110189612
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110217324}
  m_DstState: {fileID: 110225590}
  m_TransitionDuration: .0504201651
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: AvoidFlag
    m_EventTreshold: 0
    m_ExitTime: .949579835
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110216730
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_Speed: 5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 264, y: 12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110217324
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk_Blend
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20617324}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 24, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110224972
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: AttackRun
  m_Speed: 7
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 264, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110225172
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Speed: 8
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 93a673c09c3ae6f43be83c0a290d6c8e, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 24, y: -36, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110225590
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Jump
  m_Speed: 7
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: -216, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110268324
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Speed: 5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 24, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110278064
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: EndRun
  m_Speed: 3
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 0d508fe72beb915429a232b74221f2ad, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 24, y: 12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110291170
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Speed: 5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 93a673c09c3ae6f43be83c0a290d6c8e, type: 3}
  m_ParentStateMachine: {fileID: 110764382}
  m_Position: {x: 228, y: -38, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110764382
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110217324}
  m_States:
  - {fileID: 110217324}
  - {fileID: 110224972}
  - {fileID: 110216730}
  - {fileID: 110278064}
  - {fileID: 110225590}
  - {fileID: 110268324}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110217324}
      second:
      - {fileID: 110116152}
      - {fileID: 110189612}
      - {fileID: 110150670}
    data:
      first: {fileID: 110224972}
      second:
      - {fileID: 110116432}
    data:
      first: {fileID: 110216730}
      second:
      - {fileID: 110161788}
    data:
      first: {fileID: 110278064}
      second:
      - {fileID: 110188252}
    data:
      first: {fileID: 110225590}
      second:
      - {fileID: 110160354}
    data:
      first: {fileID: 110268324}
      second:
      - {fileID: 110121230}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 24, y: 96, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
